Fixing the white space below nav bar on create-profile  page

--- a/src/stylesheets/CreateProfile.css
+++ b/src/stylesheets/CreateProfile.css
@@ -20,12 +20,12 @@
 }
 
 .page-container .bg {
-    position: absolute;
-    /* top: 0; */
-    /* left: 0; */
-    /* width: 100vw; */
-    /* height: 100vh; */
+    /* position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     background-size: auto auto;
     mix-blend-mode: overlay;
-    
+     */
   }
